--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.11.1",
     "@nuxt/typescript-runtime": "^2.0.0",
     "@nuxtjs/axios": "^5.12.2",
     "@nuxtjs/pwa": "^3.0.2",
     "core-js": "^3.6.5",
-    "nuxt": "^2.14.6"
+    "nuxt": "^2.14.6",
+    "nuxt-class-component": "^1.3.0"
   },
   "devDependencies": {
     "@nuxt/types": "^2.14.6",
@@ -24,13 +26,19 @@
     "@nuxtjs/eslint-config": "^3.1.0",
     "@nuxtjs/eslint-config-typescript": "^3.0.0",
     "@nuxtjs/eslint-module": "^2.0.0",
+    "@types/googlemaps": "^3.43.0",
+    "@types/jest": "^26.0.19",
     "@vue/test-utils": "^1.1.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.5.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "eslint": "^7.10.0",
     "eslint-plugin-nuxt": "^1.0.0",
+    "fibers": "^5.0.0",
     "jest": "^26.5.0",
+    "sass": "^1.30.0",
+    "sass-loader": "^10.1.0",
     "ts-jest": "^26.4.1",
     "vue-jest": "^3.0.4"
   }
