--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,10 @@
     "@nestjs/common": "^7.5.1",
     "@nestjs/config": "^0.6.1",
     "@nestjs/core": "^7.5.1",
+    "@nestjs/mongoose": "^7.2.0",
     "@nestjs/platform-express": "^7.5.1",
+    "bcryptjs": "^2.4.3",
+    "mongoose": "^5.11.9",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3"
@@ -32,6 +35,7 @@
     "@nestjs/cli": "^7.5.1",
     "@nestjs/schematics": "^7.1.3",
     "@nestjs/testing": "^7.5.1",
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.8",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.6",
