--- a/backend/package.json
+++ b/backend/package.json
@@ -6,9 +6,9 @@
   "private": true,
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "tsc && ncp dist/backend/src dist && rimraf dist/backend && tscpaths -p tsconfig.json -s ../ -o ./dist",
+    "build": "nest build",
+    "serve": "node dist/backend/src/main",
     "start": "npm run build && npm run serve",
-    "serve": "node dist/main",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
@@ -44,14 +44,12 @@
     "eslint-config-prettier": "7.0.0",
     "eslint-plugin-prettier": "^3.1.4",
     "jest": "^26.6.3",
-    "ncp": "^2.0.0",
     "prettier": "^2.1.2",
     "supertest": "^6.0.0",
     "ts-jest": "^26.4.3",
     "ts-loader": "^8.0.8",
     "ts-node": "^9.0.0",
     "tsconfig-paths": "^3.9.0",
-    "tscpaths": "0.0.9",
     "typescript": "^4.0.5"
   },
   "jest": {
