--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^7.5.1",
+    "@nestjs/common": "^7.6.5",
     "@nestjs/config": "^0.6.1",
     "@nestjs/core": "^7.5.1",
     "@nestjs/jwt": "^7.2.0",
@@ -26,6 +26,8 @@
     "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.5.1",
     "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.3.1",
+    "class-validator": "^0.13.0",
     "mongoose": "^5.11.9",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
