Developed basic frontend middlewares and plugins

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -27,10 +27,12 @@
     "types": [
       "@types/node",
       "@nuxt/types",
+      "@nuxtjs/axios",
       "jest",
       "googlemaps"
     ]
   },
+  "include": ["./", "../common"],
   "exclude": [
     "node_modules",
     ".nuxt",
