--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.13.0",
+    "helmet": "^4.4.1",
     "mongoose": "^5.11.9",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
