--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "class-transformer": "^0.3.1",
     "class-validator": "^0.13.0",
     "helmet": "^4.4.1",
+    "meilisearch": "^0.18.0",
     "mongoose": "^5.11.9",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
