--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,6 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-
         {
             "name": "Backend",
             "type": "node",
@@ -12,6 +11,19 @@
             "cwd": "${workspaceFolder}/backend",
             "runtimeExecutable": "npm",
             "runtimeArgs": ["start"],
+            "skipFiles": [
+                "<node_internals>/**"
+            ],
+            "console": "integratedTerminal"
+        },
+        {
+            "name": "Backend File",
+            "type": "node",
+            "request": "launch",
+            "cwd": "${workspaceFolder}/backend",
+            "program": "${file}",
+            "preLaunchTask": "npm: build - backend",
+            "outFiles": ["${workspaceFolder}/backend/dist/**/*.js"],
             "skipFiles": [
                 "<node_internals>/**"
             ],
