--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "migrate-meilisearch": "npm run build && migrate up --migrations-dir dist/backend/src/database/meilisearch/migrations --matches *.js --store ./dist/backend/src/database/migration-store/meilisearch.store.js"
+    "migrate-meilisearch-up": "npm run build && migrate up --migrations-dir dist/backend/src/database/meilisearch/migrations --matches *.js --store ./dist/backend/src/database/migration-store/meilisearch.store.js",
+    "migrate-meilisearch-down": "npm run build && migrate down --migrations-dir dist/backend/src/database/meilisearch/migrations --matches *.js --store ./dist/backend/src/database/migration-store/meilisearch.store.js"
   },
   "dependencies": {
     "@nestjs/common": "^7.6.5",
