--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,9 @@
     "migrate-meilisearch-down": "npm run build && migrate down --migrations-dir dist/backend/src/database/meilisearch/migrations --matches *.js --store ./dist/backend/src/database/migration-store/meilisearch.store.js"
   },
   "dependencies": {
+    "@automapper/classes": "^3.0.8",
+    "@automapper/core": "^3.0.8",
+    "@automapper/nestjs": "^3.0.8",
     "@nestjs/common": "^7.6.5",
     "@nestjs/config": "^0.6.1",
     "@nestjs/core": "^7.5.1",
@@ -40,6 +43,7 @@
     "rxjs": "^6.6.3"
   },
   "devDependencies": {
+    "@automapper/types": "^3.0.8",
     "@nestjs/cli": "^7.5.1",
     "@nestjs/schematics": "^7.1.3",
     "@nestjs/testing": "^7.5.1",
