--- a/.github/workflows/production_compatriots-abroad-app.yml
+++ b/.github/workflows/production_compatriots-abroad-app.yml
@@ -21,11 +21,17 @@ jobs:
       with:
         node-version: '12.x'
 
-    - name: npm install, build, and test
+    - name: npm install and build frontend
       run: |
+        cd frontend
         npm install
-        npm run build --if-present
-        npm run test --if-present
+        npm run build
+
+    - name: npm install and build backend
+      run: |
+        cd backend
+        npm install
+        npm run build
 
     - name: Upload artifact for deployment job
       uses: actions/upload-artifact@v2
