--- a/.github/workflows/production_compatriots-abroad-app.yml
+++ b/.github/workflows/production_compatriots-abroad-app.yml
@@ -33,11 +33,26 @@ jobs:
         npm install
         npm run build
 
-    - name: Upload artifact for deployment job
+    - name: create bundle
+      run: |
+        mkdir bundle/frontend
+        cp -r frontend/.nuxt/* bundle/frontend
+        mkdir bundle/backend
+        cp -r backend/dist/* bundle/backend
+        cp backend/package.json bundle/backend
+        cd bundle/backend
+        npm install --only=prod
+
+    - name: zip bundle
+      uses: montudor/action-zip@v1
+      with:
+        args: zip -qq -r bundle.zip bundle
+
+    - name: Upload zipped bundle for deployment job
       uses: actions/upload-artifact@v2
       with:
-        name: node-app
-        path: .
+        name: bundle
+        path: bundle.zip
 
   deploy:
     runs-on: ubuntu-latest
