--- a/.github/workflows/production_compatriots-abroad-app.yml
+++ b/.github/workflows/production_compatriots-abroad-app.yml
@@ -70,7 +70,7 @@ jobs:
     - name: Unzip bundle
       uses: montudor/action-zip@v1
       with:
-        args: unzip -qq bundle.zip -d bundle
+        args: unzip -qq bundle.zip
 
     - name: 'Deploy to Azure Web App'
       id: deploy-to-webapp
@@ -79,4 +79,4 @@ jobs:
         app-name: 'compatriots-abroad-app'
         slot-name: 'production'
         publish-profile: ${{ secrets.AzureAppService_PublishProfile_f030976c6d7740c39778b96440d5507f }}
-        package: bundle
+        package: ./bundle
