--- a/backend/package.json
+++ b/backend/package.json
@@ -7,8 +7,9 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
-    "serve": "node dist/backend/src/main",
-    "start": "npm run build && npm run serve",
+    "serve": "node src/main",
+    "serve-dev": "node dist/backend/src/main",
+    "start": "npm run build && npm run serve-dev",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
