--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "core-js": "^3.6.5",
     "dotenv-expand": "^5.1.0",
     "meilisearch": "^0.18.2",
+    "nanoid": "^3.1.22",
     "nuxt": "^2.15.4",
     "nuxt-property-decorator": "^2.9.1"
   },
