--- a/.github/workflows/production_compatriots-abroad-app.yml
+++ b/.github/workflows/production_compatriots-abroad-app.yml
@@ -33,6 +33,11 @@ jobs:
         npm install
         npm run build
 
+    - name: unit test backend
+      run: |
+        cd backend
+        npm test
+
     - name: create bundle dir and copy pm2 config
       run: |
         mkdir bundle
