--- a/backend/package.json
+++ b/backend/package.json
@@ -12,10 +12,7 @@
     "start": "npm run build && npm run serve-dev",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test": "jest --detectOpenHandles --force-exit",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "migrate-meilisearch": "npm run build && migrate up --migrations-dir dist/backend/src/database/meilisearch/migrations --matches *.js --store ./dist/backend/src/database/migration-store/meilisearch.store.js"
   },
@@ -46,7 +43,7 @@
     "@automapper/types": "^3.0.8",
     "@nestjs/cli": "^7.5.1",
     "@nestjs/schematics": "^7.1.3",
-    "@nestjs/testing": "^7.5.1",
+    "@nestjs/testing": "^7.6.15",
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.8",
     "@types/jest": "^26.0.15",
@@ -60,6 +57,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "jest": "^26.6.3",
     "migrate": "^1.7.0",
+    "mongodb-memory-server": "^6.9.6",
     "prettier": "^2.1.2",
     "supertest": "^6.0.0",
     "ts-jest": "^26.4.3",
