--- a/.github/workflows/production_compatriots-abroad-app.yml
+++ b/.github/workflows/production_compatriots-abroad-app.yml
@@ -38,6 +38,11 @@ jobs:
         cd backend
         npm test
 
+    - name: e2e test backend
+      run: |
+        cd backend
+        npm run test:e2e
+
     - name: create bundle dir and copy pm2 config
       run: |
         mkdir bundle
