--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -10,5 +10,5 @@
     "outDir": "./dist",
     "incremental": true
   },
-  "include": ["./src", "../common"]
+  "include": ["./src", "../common", "./test"]
 }
